--- a/ca-maps.html
+++ b/ca-maps.html
@@ -5,15 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="lib/leaflet/leaflet.css" crossorigin="">
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+   crossorigin=""/>    <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
         
-    <script src="lib/leaflet/leaflet-src.js"></script>
-    <script src="lib/leaflet/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script>
     <script src="lib/jquery-3.3.1.js"></script>
     <script src="lib/bootstrap.js"></script>
-    <script src="lib/leaflet.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">    
